tests/miniJava/neg/005829_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { length ( 0 ) { } else { } } }
